# InitiationALaRecherche

./: .gitignore  readme.md
LR/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  image-scene02-moller-with-coupe.ppm  image-scene02-moller-without-coupe.ppm  image-scene02-with-coupe.ppm  image-scene02-without-coupe.ppm  image.ppm  lr  lr.cbp
LR/Src/: Camera.cpp  Camera.hpp  Image.hpp  Scene.cpp  Sphere.cpp  Triangle.cpp  Triangle.hpp  Vecteur.cpp  Vecteur.hpp  lr.cpp
